<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"NextDNS Manager"</string>
    <string name="author">"Author"</string>
    <string name="back_title">"Back"</string>
    <string name="crowdin">"Crowdin"</string>
    <string name="dark_mode">"Dark Mode"</string>
    <string name="dark_mode_instructions">"Dark Mode Setting"</string>
    <string name="developer">"Developer"</string>
    <string name="disclaimer">"This app and its developer are NOT affiliated with NextDNS."</string>
    <string name="disclaimer_title">"Disclaimer"</string>
    <string name="donation">"Donate"</string>
    <string name="donation_name">"If you enjoy this app and wish to donate, you can do so here. Please note, this is completely optional. Thanks for your support!"</string>
    <string name="sentry">"Sentry"</string>
    <string name="generic_content_description">"This is a generic content description."</string>
    <string name="github">"Github"</string>
    <string name="github_summary">"Tap to view this app's Github repository."</string>
    <string name="github_issues">"Report an Issue"</string>
    <string name="github_issues_summary">"Tap to report an issue or view currently reported ones."</string>
    <string name="help_green">"Secure DNS is being used AND device is connected to NextDNS."</string>
    <string name="help_orange">"Secure DNS is NOT being used AND device is connected to NextDNS."</string>
    <string name="help_red">"Secure DNS is NOT being used."</string>
    <string name="help_yellow">"Secure DNS is being used but device is NOT connected to NextDNS."</string>
    <string name="home_title">"Home"</string>
    <string name="nextdns_privacy_policy">"NextDNS Privacy Policy"</string>
    <string name="nextdns_user_agreement">"NextDNS User Agreement"</string>
    <string name="other">"Other"</string>
    <string name="permission">"Tap to see this app's permissions."</string>
    <string name="permission_details">"This app uses the following permissions:"</string>
    <string name="permission_question">"If you have a question about these permissions, please open an issue on Github."</string>
    <string name="permission_title">"Permissions"</string>
    <string name="ping_disabled">"This action is currently unavailable."</string>
    <string name="ping_long">"Quickly check ping times to NextDNS servers."</string>
    <string name="ping_short">"Ping"</string>
    <string name="ping_title">"Ping Test"</string>
    <string name="privacy">"Privacy"</string>
    <string name="privacy_policy">"NextDNS Manager Privacy Policy"</string>
    <string name="private_dns">"Private DNS"</string>
    <string name="refresh_title">"Refresh"</string>
    <string name="sentry_enable_instructions">"Enable Sentry"</string>
    <string name="sentry_info">"Learn More"</string>
    <string name="sentry_info_instructions">"Tap to learn more about Sentry."</string>
    <string name="settings">"Settings"</string>
    <string name="settings_activity_title">"Settings"</string>
    <string name="translate">"Translate"</string>
    <string name="translate_summary">"If you see any incorrect translations, please help me fix them here."</string>
    <string name="user_agreement">"User Agreement"</string>
    <string name="version">"Version"</string>
    <string name="whitelist_domains">"If you enable Sentry, please whitelist these domains in your NextDNS configuration."</string>
    <string name="whitelist_instructions">"Please consider opting in to Sentry error tracking. This doesn't collect any personal information and helps me make the app better."</string>
    <string name="author_name"></string>
    <string name="author_real_name"></string>
    <string name="author_url"></string>
    <string name="donation_url"></string>
    <string name="github_profile_url"></string>
    <string name="github_url"></string>
    <string name="github_issues_url"></string>
    <string name="main_url"></string>
    <string name="nextdns_privacy_policy_url"></string>
    <string name="nextdns_protocol"></string>
    <string name="nextdns_status"></string>
    <string name="nextdns_user_agreement_url"></string>
    <string name="ping_url"></string>
    <string name="privacy_policy_url"></string>
    <string name="sentry_info_url"></string>
    <string name="test_url"></string>
    <string name="translate_url"></string>
    <string name="using_nextdns_status"></string>
    <string name="versions_url"></string>
    <string name="whitelist_domain_1"></string>
    <string name="whitelist_domain_2"></string>
</resources>