<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/StatusTheme"
    tools:context=".StatusActivity">

    <ImageView
        android:id="@+id/redDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orangeDemoTextView"
        app:srcCompat="@drawable/failure_red" />

    <ImageView
        android:id="@+id/greenDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/success_green" />

    <TextView
        android:id="@+id/greenDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_green"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenDemo" />

    <TextView
        android:id="@+id/yellowDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_yellow"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellowDemo" />

    <ImageView
        android:id="@+id/yellowDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenDemoTextView"
        app:srcCompat="@drawable/success_yellow"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/orangeDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_orange"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orangeDemo" />

    <ImageView
        android:id="@+id/orangeDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellowDemoTextView"
        app:srcCompat="@drawable/failure_orange"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_red"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redDemo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>